--- a/style.css
+++ b/style.css
@@ -1,37 +1,32 @@
-body.white
-{
+body.white {
   background-color: white;
   color: black;
 }
-
-body.black
-{
+body.black {
   background-color: black;
   color: white;
 }
-
-header
-{
+header {
   border-bottom: 1px solid gray;
   padding: 20px;
 }
-nav
-{
+nav {
   border-right: 1px solid gray;
   width: 200px;
   height: 600px;
   float: left;
 }
-nav ol
-{
+nav ol {
   list-style: none;
 }
-article
-{
+article {
   float: left;
   padding: 20px;
 }
-#control
-{
+#control {
   float: right;
+}
+header img{
+  float: right;
+  height: 100px;
 }
