--- a/style.css
+++ b/style.css
@@ -18,15 +18,17 @@ nav {
 }
 nav ol {
   list-style: none;
+  padding: 0px;
 }
 article {
   float: left;
   padding: 20px;
+  width: 500px;
 }
 #control {
   float: right;
 }
-header img{
+header img {
   float: right;
   height: 100px;
 }
