--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
-body.white{
+body.white {
   background-color: white;
   color: black;
 }
-body.black{
+body.black {
   background-color: black;
   color: white;
+}
+#logo {
+  width: 100px;
+}
+.container {
+  padding-top: 20px;
+}
+#control {
+  margin-bottom: 40px;
 }
